Minor: Replace Files.walk(path, 1) with Files.List(path)